Introduced dynamic most active track selection

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -46,6 +46,7 @@
 <body>
   <div id="controls">
     <select id="routeSelect" style="display: none;"></select>
+    <div id="status" style="margin-top: 5px; font-size: 11px; color: #666;"></div>
   </div>
   <div id="legend">
     <h4>Bus Destinations</h4>
